# stock

./: .dockerignore  .gitignore  .ralph-loop.yml  AGENTS.md  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NEXT_PROMPT.md  README.md  STATE.md  TASK.md  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  stock.code-workspace
apps/api/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
apps/api/app/: __init__.py  config.py  dependencies.py  main.py
apps/api/app/routers/: __init__.py  calendar.py  history.py  instruments.py  news.py  overview.py  radar.py  snapshots.py  stocks.py
apps/api/app/schemas/: __init__.py  calendar.py  common.py  history.py  news.py  overview.py  radar.py  search.py  snapshots.py  stocks.py
apps/api/app/services/: __init__.py  deterministic_summary.py  errors.py  page_runtime.py  prompt_loader.py  readiness.py  research_metrics.py  research_snapshot_store.py  schema_validator.py  source_refs.py
apps/api/app/services/clients/: __init__.py  alpha_vantage.py  gemini_responses.py  google_news.py  open_dart.py  openai_responses.py  (+3 more)
apps/api/prompts/calendar/: output.schema.json  system.md
apps/api/prompts/common/: output.contract.md  source-policy.md  system.rules.md
apps/api/prompts/history/: output.schema.json  system.md
apps/api/prompts/news/: output.schema.json  system.md
apps/api/prompts/overview/: output.schema.json  system.md
apps/api/prompts/radar/: output.schema.json  system.md
apps/api/prompts/stock_detail/: output.schema.json  system.md
(+243 files in other folders)
