[project]
name = "stock-workspace-api"
version = "0.1.0"
description = "FastAPI scaffold for the stock research workspace"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.116,<1.0",
  "httpx>=0.28,<1.0",
  "jsonschema>=4.25,<5.0",
  "openai>=1.109.1,<2.0",
  "pydantic>=2.11,<3.0",
  "uvicorn[standard]>=0.35,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
